# thebingoai

./: .env.example  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  LICENSE  PROGRESS.md  README.md  TEST_PLAN.md  TEST_VERIFICATION_REPORT.md  alembic.ini  build-host-network.sh  build-no-proxy.sh  deploy.sh  docker-compose.yml  docker-test.sh  fix-docker-proxy.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  start.sh
.claude/: ralph-loop.local.md
alembic/: env.py
backend/: config.py  logging_config.py  main.py  prompts.py
cli/: __init__.py  api_client.py  config.py  main.py  pyproject.toml
cli/api/: client.py
cli/cache/: __init__.py  index_cache.py
cli/commands/: __init__.py  chat.py  index.py  query.py  status.py  upload.py
cli/resolver/: __init__.py  folder_resolver.py
cli/tui/: __init__.py  app.py  modals.py
docs/: FRONTEND_MASTER_PLAN.md  FRONTEND_PLAN.md  IMPLEMENTATION_01_FOUNDATION.md  IMPLEMENTATION_02_COMPONENTS.md  IMPLEMENTATION_03_DASHBOARD.md  IMPLEMENTATION_04_DOCUMENTS.md  IMPLEMENTATION_05_SEARCH.md  IMPLEMENTATION_06_CHAT.md  IMPLEMENTATION_07_JOBS.md  IMPLEMENTATION_08_SETTINGS.md  IMPLEMENTATION_09_VALIDATION.md
frontend/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  TESTING_REPORT.md  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
plan/: 00-overview.md  01-app-database.md  02-authentication.md  03-database-connectors.md  04-query-agent.md  05-chat-api.md  06-memory-system.md  07-token-tracking.md  08-config-cleanup.md  09-frontend-auth-connections.md  10-frontend-chat.md  11-frontend-memory-usage.md  (+1 more)
plugins/bingo-csv-connector/: pyproject.toml
plugins/bingo-csv-connector/bingo_csv_connector/: connector.py  parser.py  plugin.py  routes.py  service.py
(+603 files in other folders)
